# uavvs-genom3

./: .gitignore  Makefile.am  README.adoc  configure.ac  uavvs-genom3-uninstalled.pc.in  uavvs-genom3.pc.in  uavvs.gen
autoconf/: acuavvs.h.in
codels/: Makefile.am  Makefile.in  codels.h  uavvs_codels.cc  uavvs_main_codels.cc
